--- a/investigation.Rmd
+++ b/investigation.Rmd
@@ -5,7 +5,7 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
 ## Simulations
@@ -22,4 +22,3 @@ exp_sample <- rexp(1000, lambda)
 ```
 
 A sample of 1000 random exponentials is taken with $\lambda = 0.2$.
-
