Add an overwiew

--- a/investigation.Rmd
+++ b/investigation.Rmd
@@ -13,6 +13,13 @@ library(ggplot2)
 library(latex2exp)
 ```
 
+## Overview
+
+According to the *central limit theorem* (CLT), the distribution of sample means
+approximates a normal distribution as the sample size increases, regardless of
+the population distribution. This document aims to show the same for simulated
+sample means of an exponential distribution with rate 0.2.
+
 ## Simulations
 
 ```{r random_seed}
