Change the title

--- a/investigation.Rmd
+++ b/investigation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exponential distribution investigation"
+title: "Exponential sample means distribution investigation"
 author: "Srijan Nayak"
 date: "05/08/2020"
 output: pdf_document
